--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 
 .App-header {
   background-color: #222;
- // height: 150px;
+  /*height: 150px;*/
   padding: 20px;
   color: white;
 }
@@ -22,12 +22,53 @@
   font-size: large;
 }
 
-.chat-box {
-  max-height: 300px;
-  overflow: auto;
-}
-
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.navbar{
+  margin-left: 300px;
+}
+
+.navbar>img{
+  width: 105px;
+  margin-top: 40px;
+  margin-left: 52px;
+  height: 100px;
+}
+
+.navbar > span{
+  font-weight: 700;
+  font-size: xx-large;
+}
+
+
+.loginForm img{
+  width: 118px;
+  height:100px;
+  margin-left: 25px;
+}
+
+.login{
+  margin-left: -25px;
+  margin-top: 10px;
+}
+
+.about-page-div1{
+  margin: 20px 48px 10px 48px;
+}
+
+.userImage{
+  height: 100px;
+  border-radius: 50px;
+}
+
+.home-page-div{
+  margin: 40px 130px 20px 450px;
+}
+
+.login-form {
+  max-width: 320px;
+  margin: auto;
 }
